# pymcc

./: CMakeLists.txt  pyproject.toml  setup.py
libmcc_lidar/: Algorithm.cpp  CMakeLists.txt  SurfaceInterpolation.cpp
python/: CMakeLists.txt  pymcc_lidar.pxd  pymcc_lidar.pyx  pymccp.cpp  pymccp.h
python/cmake/: FindNumPy.cmake
