[build-system]
requires = ["scikit-build-core>=0.3", "cython", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "pymcc_lidar"
version = "1.3"
description = "A Python package for point cloud classification using relative height"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = ["numpy"]
authors = [
    { name = "George Hilley", email = "hilley@stanford.edu" },
    { name = "Robert Sare" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.scikit-build]
wheel.packages = []
